# shortcuts_app

./: .example.env  .gitignore  .mise.toml  GEMINI.md  README.md  add_audio_info_to_notion.py  download_and_upload_for_notion.py  download_audee.py  download_audio_from_html.py  download_bitfan.py  download_bitfan_playwright.py  ffmpeg_split_by_5gib.py  logging_config.json  login_bitfan.py  pyproject.toml  requirements.in  requirements.txt  sample_args.py  sample_ffmpeg.py  sample_headless_browser.py  sample_logger.py  sample_radiko.py  sample_read_html.py  sample_ytdlp.py  save_book_for_kindle.py  upload-files-to-notion.py  upload_1file_to_notion.py  upload_files_to_notion.py
.gemini/: config.jsonc
AudioInfoExtractor/: __init__.py  audio_info_extractor.py
MyFfmpegHelper/: __init__.py  my_ffmpeg_helper.py
MyLoggerHelper/: __init__.py  my_logger_helper.py
MyNotionHelper/: __init__.py  my_notion_helper.py
MyPathHelper/: __init__.py  my_path_helper.py
archive/: download_audee_playwright.py  download_bitfan_playwright.py  login_bitfan.py
tests/: test_audio_info_extractor.py  test_my_ffmpeg_helper.py  test_my_notion_helper.py  test_my_path_helper.py
tools/: extract_audio_info.py
