[project]
name = "shortcuts_app"
version = "0.1.0"
description = "Mac用ショートカットappで使うpythonスクリプト集"
requires-python = ">=3.13"
dependencies = [
    "notion-client==2.3.0",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "yt-dlp==2025.5.22",
    "ffmpeg-python==0.2.0",
    "selenium==4.34.2",
    "webdriver-manager==4.0.2",
    "playwright==1.53.0",
    "pathvalidate==3.3.1",
    "beautifulsoup4==4.13.4",
    "lxml==6.0.0"
]

[project.optional-dependencies]
test = [
    "pytest==8.4.1"
]

[tool.setuptools]
packages = ["MyPathHelper", "MyNotionHelper", "MyFfmpegHelper", "MyLoggerHelper"]

[dependency-groups]
dev = [
    "pytest==8.4.1",
]
